# burn-modules

./: CHANGELOG.md  Cargo.nix  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 01mjqrlmvg3wkv9jmvadv8xlybf0vf35-source  1yrjhwczi947p9cgmz9d5s85cjxdcg85-source  49mrmsvafx8lscgi9623i2ywnsq631j4-source  5gbz8li7jihrv2pm9gl0lnf89km1pd0j-source  68bh6h364y9mh6i30pc6fqn5dn9865sq-source  6l5mi7ymb736k7qc70sl9y4y09v2xlb8-source  8pyclh319py0z6rb182msdzw61zbj588-source  asifadinfk5bamn69xqmav3w5j66y8hg-source  b7r14dn2hkgxnnhsm6w69y2sx0ryl154-source  g2i114c19ck375xw9j0rjp9yfyv0gas1-source  gbdx8sqsmiw3axs1bz02cnhd34jsjgyp-source  hmdrbx9jj9kk6nmhiljv3ffz2nwkihwa-source  jzzqbc1lbwy85cg01iv335j44978frj8-source  l83m0klsz932hx1fj0zkxd6xyzfm6d2b-source  lc4p5v5jj0qis242cgjbk21qv9pkrhf7-source  p7m2lkwv9s28hbjrs95qbbsgl5nwhcn2-source  p7q0z57xx7b5dgqq5p1xzk4gs181cxjp-source  rmgf1iis34d4mgnc8k3j1lxmzf1mhrq1-source  v7475wfflarb26lx4r44i2vpl0hayr78-source  vxlha97i4v0nkjsl7qqrv9ccvv5rc6vl-source  wxjsfgkkd93fwqn1g49srpj9gms656wn-source
src/modules/: graph.rs  mlp.rs  mod.rs
src/modules/graph/: node_weights.rs
