[package]
name = "burn-modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# burn = {git = "https://github.com/tracel-ai/burn.git", branch="main", features = ["train", "wgpu", "vision"]}
burn = "*"
serde = "*"
